# moseoh-lab

./: README.md
.github/: dependabot.yml
.github/workflows/: telegram-bot-cd.yml  telegram-bot-ci.yml  telegram-bot-image.yml  telegram-bot-package-cleanup.yml
agents/: link.sh
agents/claude/commands/: questions.md
agents/claude/commands/git/: commit.md  pr.md
agents/claude/skills/skill-manager/: SKILL.md
agents/codex/ddg-search/: SKILL.md
agents/codex/researcher/: SKILL.md
agents/codex/skills/cmux/: SKILL.md
agents/codex/skills/git/commit/: SKILL.md
agents/codex/skills/orchestrator/: SKILL.md
agents/codex/skills/questions/: SKILL.md
agents/codex/skills/skill-manager/: SKILL.md  openai.md
agents/codex/skills/subagent-manager/: SKILL.md  subagents.md
agents/codex/skills/tmux/: SKILL.md
agents/codex/yt-search/: SKILL.md
agents/opencode/commands/git/: commit.md  pr.md
applications/telegram-bot/: .dockerignore  .env.example  Dockerfile  README.md  atlas.hcl  pyproject.toml
applications/telegram-bot/deploy/kubernetes/: README.md  deployment.yaml  pvc.yaml
applications/telegram-bot/deploy/kubernetes/examples/: opentelemetry-patch.yaml
applications/telegram-bot/migrations/: 20260320000000_init.sql
applications/telegram-bot/src/: bot.py  main.py  telemetry.py
applications/telegram-bot/src/db/: connection.py
applications/telegram-bot/src/features/lotto/: commands.py  interaction.py  notification.py  scheduler.py  week_utils.py
applications/telegram-bot/tests/: test_telemetry.py  test_telemetry_docs.py  test_telemetry_privacy.py  test_telemetry_wiring.py
discord-bot/: .env.example  AGENTS.md  Dockerfile  Makefile  README.md  atlas.hcl  docker-compose.dokploy.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  sqlc.yaml  tsconfig.json
discord-bot/migrations/: 20251231082011_init_lotto.sql  20251231092757_add_guild_settings.sql  20251231093942_alarm_settings.sql  atlas.sum
discord-bot/queries/: lotto.sql  settings.sql
discord-bot/schema/: schema.sql
discord-bot/src/: bot.py  index.ts  main.py
discord-bot/src/db/: connection.py  lotto.py  models.py  settings.py
discord-bot/src/features/lotto/: __init__.py  commands.py  constants.py  interaction.py  notification.py  scheduler.py  week_utils.py
docs/superpowers/plans/: 2026-07-11-telegram-bot-container-publish.md  2026-07-11-telegram-bot-kubernetes-base.md
docs/superpowers/specs/: 2026-07-11-telegram-bot-container-publish-design.md  2026-07-11-telegram-bot-kubernetes-base-design.md
telegram-bot/: .env.example  Dockerfile  README.md  docker-compose.dokploy.yml  pyproject.toml
telegram-bot/migrations/: atlas.sum
telegram-bot/schema/: schema.sql
telegram-bot/src/: bot.py
telegram-bot/src/db/: connection.py  lotto.py  models.py  settings.py
telegram-bot/src/features/lotto/: __init__.py  commands.py  constants.py
tools/thumbnail-generator/: AGENTS.md  README.md  auto-generator.js  config-bookreport.json  config.json  generate.js  justfile  package-lock.json  package.json
tools/thumbnail-generator/config/: book-cover.json  logo.json
(+3 files in other folders)
