[project]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram Lotto Reminder Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=22.7",
    "sqlalchemy[asyncio]>=2.0.49",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "python-dotenv>=1.2.2",
    "loguru>=0.7.3",
]

[project.scripts]
telegram-bot = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
