[project]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram Lotto Reminder Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=22.8",
    "sqlalchemy[asyncio]>=2.0.51",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.3",
    "python-dotenv>=1.2.2",
    "loguru>=0.7.3",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.43.0",
    "opentelemetry-instrumentation-httpx>=0.64b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.64b0",
    "opentelemetry-instrumentation-system-metrics>=0.65b0",
]

[project.scripts]
telegram-bot = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
